--- a/src/Shop.css
+++ b/src/Shop.css
@@ -1,5 +1,5 @@
 .shop {
-	background-color: #ffd3d3;
+	background-color: #ffe9e9;
 	padding: 20px;
 }
 .shop-container {
@@ -20,5 +20,5 @@
 	border-radius: 10px;
 	width: 50px;
 	height: 1px;
-	margin-top: 10px;
+	margin: 10px 0;
 }
