--- a/src/Cart.css
+++ b/src/Cart.css
@@ -5,6 +5,7 @@
 .cart-container {
 	display: flex;
 	justify-content: center;
+	min-height: calc(100vh - 100px);
 }
 .cart-left {
 	flex: 1;
@@ -16,11 +17,15 @@
 .cart-title h3 {
 	flex: 1;
 }
+.cart-products {
+	background-color: #f0f0f0;
+}
 .continue-shopping-link {
 	background-color: #fafafa;
 	color: blue;
 	border: 1px solid lightgray;
 	border-radius: 7px;
+	box-shadow: 2px 2px 3px lightgray;
 	margin-left: 50px;
 	margin-bottom: 5px;
 	padding: 5px;
@@ -33,6 +38,7 @@
 	background-color: #f0f0f0;
 	border: 1px solid black;
 	border-radius: 10px;
+	box-shadow: 5px 5px 3px lightgray;
 	margin: 20px 0;
 	padding: 10px;
 }
@@ -54,6 +60,7 @@
 	background-color: #ffdd55;
 	border-radius: 5px;
 	border: 1px solid gray;
+	box-shadow: 1px 1px 3px black;
 	width: 100%;
 	height: 35px;
 }
