--- a/src/CheckoutProduct.css
+++ b/src/CheckoutProduct.css
@@ -1,10 +1,10 @@
 .checkout-product {
-	background-color: #f0f0f0;
 	border-radius: 7px;
 	padding: 20px;
 }
 .checkout-product-container {
 	background-color: white;
+	box-shadow: 5px 5px 5px #e5e5e5;
 	display: flex;
 	align-items: center;
 	border-radius: 10px;
@@ -18,4 +18,12 @@
 	width: 220px;
 	height: 140px;
 	object-fit: contain;
+}
+.checkout-qnty-container {
+	display: flex;
+}
+.checkout-qnty-input {
+	font-weight: bold;
+	margin-left: 5px;
+	margin-right: 5px;
 }
