--- a/src/Header.css
+++ b/src/Header.css
@@ -1,10 +1,10 @@
 .header {
-	background-color: #15001f;
+	background-color: white;
 	margin: 0 auto;
 }
 .header nav {
 	display: flex;
-	padding: 50px 0;
+	padding: 30px 0;
 	margin: 0 4vw;
 }
 .header-desktop-nav {
@@ -52,7 +52,7 @@
 }
 .mobile-close {
 	background: none;
-	color: white;
+	color: black;
 	border: none;
 	width: 100%;
 	padding: 0;
@@ -70,7 +70,7 @@
 	margin: 0 4vw;
 }
 .header-link {
-	color: white;
+	color: black;
 }
 .modal-link {
 	color: black;
