--- a/src/Product.css
+++ b/src/Product.css
@@ -8,6 +8,7 @@
 	justify-content: center;
 	align-items: center;
 	border-radius: 10px;
+	box-shadow: 5px 5px 5px #b5b5b5;
 	padding: 10px;
 	height: 220px;
 	width: 180px;
