--- a/src/Shop.css
+++ b/src/Shop.css
@@ -7,6 +7,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	min-height: calc(100vh - 100px);
 }
 .shop-products {
 	display: flex;
